--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
     </div>
   </footer>
 </div>
-<script src="jquery/dist/jquery.min.js"></script>
-<script src="bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="jquery-slimscroll/jquery.slimscroll.min.js"></script>
-<script src="fastclick/lib/fastclick.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.slimscroll.min.js"></script>
+<script src="js/fastclick.js"></script>
 <script src="js/adminlte.min.js"></script>
 <script src="js/demo.js"></script>
 </body>
