--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,167 +19,179 @@
   <![endif]-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="hold-transition skin-blue layout-top-nav">
-<div class="wrapper">
 
-  <header class="main-header">
-    <nav class="navbar navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="#" class="navbar-brand"><b>Lara</b>Book</a>
-        </div>
-        <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" id="navbar-search-input" placeholder="Search">
-            </div>
-          </form>
-        </div>
-        <div class="navbar-custom-menu">
-          <ul class="nav navbar-nav">
-            <li class="dropdown user user-menu">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="img/user2-160x160.jpg" class="user-image" alt="User Image">
-                <span class="hidden-xs">Alexander Pierce</span>
-              </a>
-              <ul class="dropdown-menu">
-                <li class="user-header">
-                  <img src="img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                  <p>
-                    Alexander Pierce - Web Developer
-                    <small>Member since Nov. 2012</small>
-                  </p>
-                </li>
-                <li class="user-body">
-                  <div class="row">
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Followers</a>
-                    </div>
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Sales</a>
-                    </div>
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Friends</a>
-                    </div>
-                  </div>
-                </li>
-                <li class="user-footer">
-                  <div class="pull-left">
-                    <a href="#" class="btn btn-default btn-flat">Profile</a>
-                  </div>
-                  <div class="pull-right">
-                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                  </div>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <div class="content-wrapper">
-    <div class="container">
-      <section class="content-header">
-        <h1>
-          Beranda
-        </h1>
-        <ol class="breadcrumb">
-          <li><a href="#"><i class="fa fa-home"></i>Beranda</a></li>
-        </ol>
-      </section>
-      <!-- Main content -->
-      <section class="content">
-        <div class="box box-default">
-          <div class="box-header with-border">
-            <h3 class="box-title">Update Status</h3>
+<body class="hold-transition skin-blue layout-top-nav">
+  <div class="wrapper">
+
+    <header class="main-header">
+      <nav class="navbar navbar-static-top">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="#" class="navbar-brand">
+              <b>Lara</b>Book</a>
           </div>
-          <div class="box-body">
-            <div class="col-md-12">
-            <form class="form-horizontal">
-                <div class="form-group">
-                  <textarea class="form-control" rows="3" placeholder="Apa yang anda pikirkan?"></textarea>
-                </div>
+          <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
+            <form class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" id="navbar-search-input" placeholder="Search">
+              </div>
             </form>
-            <div class="box-footer">
-              <button type="submit" class="btn btn-info pull-right">Bagikan</button>
-            </div>
           </div>
+          <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+              <li class="dropdown user user-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <img src="img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <span class="hidden-xs">Alexander Pierce</span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li class="user-header">
+                    <img src="img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <p>
+                      Alexander Pierce - Web Developer
+                      <small>Member since Nov. 2012</small>
+                    </p>
+                  </li>
+                  <li class="user-body">
+                    <div class="row">
+                      <div class="col-xs-4 text-center">
+                        <a href="#">Followers</a>
+                      </div>
+                      <div class="col-xs-4 text-center">
+                        <a href="#">Sales</a>
+                      </div>
+                      <div class="col-xs-4 text-center">
+                        <a href="#">Friends</a>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="user-footer">
+                    <div class="pull-left">
+                      <a href="#" class="btn btn-default btn-flat">Profile</a>
+                    </div>
+                    <div class="pull-right">
+                      <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="row">
-        <div class="col-md-12">
-          <div class="box box-widget">
+      </nav>
+    </header>
+    <div class="content-wrapper">
+      <div class="container">
+        <section class="content-header">
+          <h1>
+            Beranda
+          </h1>
+          <ol class="breadcrumb">
+            <li>
+              <a href="#">
+                <i class="fa fa-home"></i>Beranda</a>
+            </li>
+          </ol>
+        </section>
+        <!-- Main content -->
+        <section class="content">
+          <div class="box box-default">
             <div class="box-header with-border">
-              <div class="user-block">
-                <img class="img-circle" src="img/user1-128x128.jpg" alt="User Image">
-                <span class="username"><a href="#">Jonathan Burke Jr.</a></span>
-                <span class="description">Shared publicly - 7:30 PM Today</span>
-              </div>
-              <div class="box-tools">
-                <button type="button" class="btn btn-box-tool" data-toggle="tooltip" title="Mark as read">
-                  <i class="fa fa-circle-o"></i></button>
-                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-              </div>
+              <h3 class="box-title">Update Status</h3>
             </div>
             <div class="box-body">
-              <img class="img-responsive pad" src="img/photo2.png" alt="Photo">
-              <p>I took this photo this morning. What do you guys think?</p>
-              <button type="button" class="btn btn-default btn-xs"><i class="fa fa-share"></i> Share</button>
-              <button type="button" class="btn btn-default btn-xs"><i class="fa fa-thumbs-o-up"></i> Like</button>
-              <span class="pull-right text-muted">127 likes - 3 comments</span>
+              <div class="col-md-12">
+                <form class="form-horizontal">
+                  <div class="form-group">
+                    <textarea class="form-control" rows="3" placeholder="Apa yang anda pikirkan?"></textarea>
+                  </div>
+                </form>
+                <div class="box-footer">
+                  <button type="submit" class="btn btn-info pull-right">Bagikan</button>
+                </div>
+              </div>
             </div>
-            <div class="box-footer box-comments">
-              <div class="box-comment">
-                <img class="img-circle img-sm" src="img/user3-128x128.jpg" alt="User Image">
-                <div class="comment-text">
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="box box-widget">
+                <div class="box-header with-border">
+                  <div class="user-block">
+                    <img class="img-circle" src="img/user1-128x128.jpg" alt="User Image">
+                    <span class="username">
+                      <a href="#">Jonathan Burke Jr.</a>
+                    </span>
+                    <span class="description">Shared publicly - 7:30 PM Today</span>
+                  </div>
+                  <div class="box-tools">
+                    <button type="button" class="btn btn-box-tool" data-toggle="tooltip" title="Mark as read">
+                      <i class="fa fa-circle-o"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                      <i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove">
+                      <i class="fa fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <div class="box-body">
+                  <img class="img-responsive pad" src="img/photo2.png" alt="Photo">
+                  <p>I took this photo this morning. What do you guys think?</p>
+                  <button type="button" class="btn btn-default btn-xs">
+                    <i class="fa fa-share"></i> Share</button>
+                  <button type="button" class="btn btn-default btn-xs">
+                    <i class="fa fa-thumbs-o-up"></i> Like</button>
+                  <span class="pull-right text-muted">127 likes - 3 comments</span>
+                </div>
+                <div class="box-footer box-comments">
+                  <div class="box-comment">
+                    <img class="img-circle img-sm" src="img/user3-128x128.jpg" alt="User Image">
+                    <div class="comment-text">
                       <span class="username">
                         Maria Gonzales
                         <span class="text-muted pull-right">8:03 PM Today</span>
-                  It is a long established fact that a reader will be distracted
-                  by the readable content of a page when looking at its layout.
-                </div>
-              </div>
-              <div class="box-comment">
-                <img class="img-circle img-sm" src="img/user4-128x128.jpg" alt="User Image">
-                <div class="comment-text">
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </div>
+                  </div>
+                  <div class="box-comment">
+                    <img class="img-circle img-sm" src="img/user4-128x128.jpg" alt="User Image">
+                    <div class="comment-text">
                       <span class="username">
                         Luna Stark
                         <span class="text-muted pull-right">8:03 PM Today</span>
-                  It is a long established fact that a reader will be distracted
-                  by the readable content of a page when looking at its layout.
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </div>
+                  </div>
+                </div>
+                <div class="box-footer">
+                  <form action="#" method="post">
+                    <img class="img-responsive img-circle img-sm" src="img/user4-128x128.jpg" alt="Alt Text">
+                    <div class="img-push">
+                      <input type="text" class="form-control input-sm" placeholder="Press enter to post comment">
+                    </div>
+                  </form>
                 </div>
               </div>
+        </section>
+        </div>
+        </div>
+        <footer class="main-footer">
+          <div class="container">
+            <div class="pull-right hidden-xs">
+              <b>Version</b> 2.4.0
             </div>
-            <div class="box-footer">
-              <form action="#" method="post">
-                <img class="img-responsive img-circle img-sm" src="img/user4-128x128.jpg" alt="Alt Text">
-                <div class="img-push">
-                  <input type="text" class="form-control input-sm" placeholder="Press enter to post comment">
-                </div>
-              </form>
-            </div>
+            <strong>Copyright &copy; 2014-2016
+              <a href="https://adminlte.io">Almsaeed Studio</a>.</strong> All rights reserved.
           </div>
-      </section>
-    </div>
-  </div>
-  <footer class="main-footer">
-    <div class="container">
-      <div class="pull-right hidden-xs">
-        <b>Version</b> 2.4.0
+        </footer>
       </div>
-      <strong>Copyright &copy; 2014-2016 <a href="https://adminlte.io">Almsaeed Studio</a>.</strong> All rights
-      reserved.
-    </div>
-  </footer>
-</div>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.slimscroll.min.js"></script>
-<script src="js/fastclick.js"></script>
-<script src="js/adminlte.min.js"></script>
-<script src="js/demo.js"></script>
+      <script src="js/jquery.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/jquery.slimscroll.min.js"></script>
+      <script src="js/fastclick.js"></script>
+      <script src="js/adminlte.min.js"></script>
+      <script src="js/demo.js"></script>
 </body>
+
 </html>
