--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/ionicons.min.css">
   <link rel="stylesheet" href="css/AdminLTE.min.css">
   <link rel="stylesheet" href="css/_all-skins.min.css">
+  <link rel="stylesheet" href="css/blue.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -192,6 +193,16 @@
       <script src="js/fastclick.js"></script>
       <script src="js/adminlte.min.js"></script>
       <script src="js/demo.js"></script>
+      <script src="js/icheck.min.js"></script>
+      <script>
+      $(function () {
+          $('input').iCheck({
+              checkboxClass: 'icheckbox_square-blue',
+              radioClass: 'iradio_square-blue',
+              increaseArea: '20%' // optional
+          });
+      });
+      </script>
 </body>
 
 </html>
